# digi-product-be

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
app/: settings.py  urls.py  views.py
app/management/commands/: runsql.py
app/templates/: home.html
product/: models.py  serializers.py  urls.py
product/migrations/: 0001_alter.py
product/views/: auth.py  product.py
sql/: master_product.sql
