[tool.poetry]
name = "digi-product-be"
version = "0.1.0"
description = "backend digital product aka e-commerce"
authors = ["ngrhadi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
psycopg-binary = "^3.1.19"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
